# AzureRustWebAppContainer

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md
src/: main.rs
