[package]
name = "container_azure_rust"
version = "0.1.0"
authors = ["Marco Luglio <marcodejulho@outlook.com>"]
edition = "2018"
repository = "https://github.com/marcodejulho/AzureRustWebAppContainer/"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
